--- a/app/views/account/index.html.erb
+++ b/app/views/account/index.html.erb
@@ -1,1 +1,2 @@
 <h1>SIMPLE TODO LIST</h1>
+<%= link_to "Log Out", destroy_user_session_path, method: :delete, :class => "btn btn-outline-primary" %>
