--- a/app/views/account/index.html.erb
+++ b/app/views/account/index.html.erb
@@ -1,2 +1,3 @@
 <h1>SIMPLE TODO LIST</h1>
+<%= link_to "Change project", projects_path, :class => "btn btn-outline-primary" %>
 <%= link_to "Log Out", destroy_user_session_path, method: :delete, :class => "btn btn-outline-primary" %>
