--- a/app/views/projects/_new.erb
+++ b/app/views/projects/_new.erb
@@ -1,10 +1,10 @@
 
 <div class="modal-header">
-  <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+  <h4 class="modal-title" id="myModalLabel">New project</h4>
   <button type="button" class="close" data-dismiss="modal">x</button>
 </div>
 <div class="modal-body">
-  *Modal content comes here*
+  description: test
 </div>
 <div class="modal-footer">
   <button class="btn btn-primary">Save</button>
