--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -1,3 +1,35 @@
 .projectAction {
   cursor: pointer;
 }
+
+body::before {
+  content: '';
+  position: fixed; /* Фиксируем на одном месте */
+  left: 0; right: 0; /* Вся ширин */
+  top: 0; bottom: 0; /* Вся высота */
+  z-index: -1; /* Фон ниже текста */
+  /* Параметры фона */
+  background: url("Флаг.jpg") center / cover no-repeat;
+  filter: blur(5px); /* Размытие */
+}
+
+.project {
+  background: white;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+}
+
+.checkBox{
+  width: 1%;
+  text-align: center;
+}
+
+.separator {
+  border-left: solid bisque 1px;
+  padding:  0 1px;
+  vertical-align: center;
+}
+
+th {
+  padding: 0;
+}
