--- a/app/views/projects/_new_project.erb
+++ b/app/views/projects/_new_project.erb
@@ -4,7 +4,8 @@
   <button type="button" class="close" data-dismiss="modal">x</button>
 </div>
 <div class="modal-body">
-  description: test
+  description: must text input <br>
+  dedline:     must text input
 </div>
 <div class="modal-footer">
   <button class="btn btn-primary">Save</button>
