--- a/app/views/projects/new_modal.js.erb
+++ b/app/views/projects/new_modal.js.erb
@@ -1,3 +1,3 @@
 
-$("#modal-window").find(".modal-content").html("<%= j (render 'new') %>");
-$("#modal-window").modal();
+$("#projectModal-window").find(".modal-content").html("<%= j (render 'new_project') %>");
+$("#projectModal-window").modal();
