--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -4,13 +4,12 @@
 
 body::before {
   content: '';
-  position: fixed; /* Фиксируем на одном месте */
-  left: 0; right: 0; /* Вся ширин */
-  top: 0; bottom: 0; /* Вся высота */
-  z-index: -1; /* Фон ниже текста */
-  /* Параметры фона */
+  position: fixed;
+  left: 0; right: 0;
+  top: 0; bottom: 0;
+  z-index: -1;
   background: url("Флаг.jpg") center / cover no-repeat;
-  filter: blur(5px); /* Размытие */
+  filter: blur(5px);
 }
 
 .project {
@@ -32,4 +31,55 @@ body::before {
 
 th {
   padding: 0;
+}
+
+tr:hover .task-buttons {
+  display: inline;
+}
+
+.project-buttons, .task-buttons {
+  display: none;
+}
+
+.project-heading {
+  cursor: pointer;
+}
+.project-heading:hover .project-buttons {
+  display: inline;
+}
+
+tr {
+  height: 63px;
+}
+
+td.description {
+  cursor: pointer;
+}
+
+.form-control {
+  border-radius: 0;
+}
+
+.btn-up, .btn-down{
+  border: none;
+  height: 12px;
+  width: 16px;
+  background: none;
+  font-size: 12px;
+  color: #007BFF;
+  padding: 0;
+}
+
+.btn-down {
+  margin-bottom: 10px;
+}
+
+.btn-up:active, .btn-up:focus, .btn-down:active, .btn-down:focus {
+  -moz-outline-style: none;
+  outline:none;
+  outline: 0;
+}
+
+.btn-up:hover, .btn-down:hover {
+  color: #6610f2;
 }
