--- a/app/views/projects/_new_project.erb
+++ b/app/views/projects/_new_project.erb
@@ -3,9 +3,11 @@
   <h4 class="modal-title" id="myModalLabel">New project</h4>
   <button type="button" class="close" data-dismiss="modal">x</button>
 </div>
-<div class="modal-body">
-  description: must text input <br>
-</div>
-<div class="modal-footer">
-  <button class="btn btn-primary">Save</button>
-</div>
+<%= form_for Project.new do |p| %>
+  <div class="modal-body">
+    <%= p.text_field :name, {class: 'chat-input form-control', placeholder: 'project name'}  %>
+  </div>
+  <div class="modal-footer">
+    <%= p.submit "Save", {class: 'btn btn-primary'} %>
+  </div>
+<% end %>
